voegt JCF opdracht 3 toe

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ hs_err_pid*
 /pragprog5/nbproject/private/
 /Huffman/build/
 /Huffman/dist/
+/JCF Opdracht 3/nbproject/private/
+/JCF Opdracht 3/build/
+/JCF Opdracht 3/dist/
